fix tinymce vertical spacing issue

--- a/castle/cms/static/less/logged-in/mosaic.less
+++ b/castle/cms/static/less/logged-in/mosaic.less
@@ -101,18 +101,26 @@ div.mosaic-toolbar {
   position: fixed;
 }
 
-.mosaic-panel .castle-rawhtml-tile.mosaic-tile-dark .mosaic-rich-text-toolbar {
-  margin-top: -60px;
+.mosaic-panel {
+
+  .mosaic-tile .mosaic-tile-content-empty.mce-edit-focus p:first-child {
+    height: unset;
+  }
+
+  .castle-rawhtml-tile.mosaic-tile-dark .mosaic-rich-text-toolbar {
+    margin-top: -60px;
+  }
+
+  .mosaic-selected-tile .mosaic-tile-outer-border {
+    border: 1px solid #292929;
+  }
+
 }
 
 .mosaic-tile-label {
   left: 23px;
   top: -24px;
   z-index: 50;
-}
-
-.mosaic-panel .mosaic-selected-tile .mosaic-tile-outer-border {
-  border: 1px solid #292929;
 }
 
 .mosaic-IRichText-text-tile,
@@ -494,7 +502,7 @@ div.mosaic-toolbar {
   opacity: 1;
   z-index: 99999999;
   min-width: 450px;
-  
+
   .portalMessage dd ul {
     padding-left: 0;
     .title {
